deployment/admission/tests/deployment-bad-name.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: ztd-adm-001
spec:
  selector:
    matchLabels: {app: ztd-app}
  template:
    metadata:
      labels: {app: ztd-app}
    spec:
      containers:
        - name: app
          image: ghcr.io/eclipse-xfsc/facis-zero-trust-demonstrator/app@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
