deployment/admission/tests/pod-ephemeral-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ztd-app
  namespace: ztd-adm-001
spec:
  containers:
    - name: app
      image: ghcr.io/eclipse-xfsc/facis-zero-trust-demonstrator/app@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  ephemeralContainers:
    - name: debug
      image: ghcr.io/eclipse-xfsc/facis-zero-trust-demonstrator/appatest
